 'Supage Fun' Changelog:
 =======================

* December 2, 2011 - Version 0.5.2:
  - Support for 'Parser Fun' extensions 'THIS' function added. With 'Parser Fun' enabled it now is possible to call
    '{{THIS:SUBPAGETITLE}}' which will output the subpage title of the template or page where the phrase is defined on, not the
    page which is actually being rendered by the parser as '{{SUBPAGETITLE}}' would output it.
  - Parser function functions within 'ExtSubpageFun' class now have a 'pf_' prefix.

* November 8, 2011 - Version 0.5.1:
  - All functions/variables returning page names in any way are using 'wfEscapeWikiText()' now like other variables like 'PAGENAME'
    for example.
  - 'filter' parameter can be used for 'NUMBEROFSUBPAGES'.

* November 7, 2011 -- Version 0.5:
  - All magic words are case-sensitive now and must be written in UPPERCASE.
  - Input of invalid page names (with forbidden characters) will output '' instead of raising a php error. This behavior is adopted
    from {{FULLPAGENAME}} which also outputs '' in that case.
  - New parameter 'filter' for 'SUBPAGES', 'PARENTPAGES' and 'SIBLINGPAGES'. This allows to filter the list of pages by keywords or
    a regular expression (delimiters '/', '%' and '|' allowed, flags 'imsSuUx'. If the string is not considered a valid regex, the
    string is considered a list of keywords (separated by '|' e.g. through a template '{{!}}').
  - Functions output on category pages with link parameter set will no longer create category links but real links how it should be.
  - Language file added.
  - 'SubpageInfo' class put into new file 'SFun_SubpageInfo.php'.
  - Further code cleanup. Magic words overload removed.
  - 'Supage Fun' now is distributed under ISC License and can be found in wikimedia.org svn.


* September 16, 2011 -- Version 0.4:
  - Cleaned-up code, gotten rid of global functions. All useful functions for other extension developers are in 'SubpageInfo' class,